@@ -1,5 +1,10 @@
 2008-08-28  Albert Graef  <Dr.Graef@t-online.de>
 
+	* runtime.cc/h: Added sentries -- expression "guards" which are
+	applied to the target expression when it is garbage-collected.
+	Only sentries on applications and pointer objects are supported
+	right now.
+
 	* Makefile.in: Set LC_ALL=C, to work around failed math tests due
 	to locale-related problems on some systems. Note: This requires a
 	reconfigure.
